--- a/test.ipynb
+++ b/test.ipynb
@@ -240,7 +240,9 @@
    "cell_type": "code",
    "execution_count": null,
    "outputs": [],
-   "source": [],
+   "source": [
+    "from torchvision.transforms import"
+   ],
    "metadata": {
     "collapsed": false
    }
